# cursor

./: .gitignore  Dockerfile  Makefile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SUMMARY.md  action-plan.md  codeowners_workflow_diagram.md  create_video.py  create_video_from_images.py  create_video_moviepy.py  create_video_opencv.py  dcgm-exporter-investigation.md  discovery-scripts.md  docker-compose.yml  investigation-complete.txt  prometheus.yml  pyproject.toml  quick-reference.md  requirements.txt  video_creation_guide.md  yace-config.yaml
analysis/cost-calculator/: cost-comparison.py  cost-spreadsheet.csv
deploy/crds/: restartrequests.restart.krr.sh.yaml
deploy/operator/: krr-operator.yaml
deployment/fluent-bit/: fluent-bit-config.yaml  fluent-bit-daemonset.yaml  kustomization.yaml
deployment/grafana/: grafana-config.yaml  grafana-dashboards.yaml  grafana-deployment.yaml  kustomization.yaml
deployment/loki/: kustomization.yaml  loki-config.yaml  loki-deployment.yaml
deployment/minio/: kustomization.yaml  minio-deployment.yaml
deployment/promtail/: kustomization.yaml  promtail-config.yaml  promtail-daemonset.yaml
deployment/tempo/: kustomization.yaml  (+2 more)
docs/: architecture.md  comparison-results.md  confluence-export.md  deployment-guide.md  poc-loki-tempo.md  testing-guide.md
helm/: grafana-values.yaml  loki-values.yaml  minio-values.yaml  promtail-values.yaml  tempo-values.yaml
k8s/: loki-rules.yaml
scripts/: cleanup.sh  deploy-all.sh  deploy.sh  measure-logcli.sh  run-tests.sh
storage/: minio-ilm-30d.json
tests/: test_models.py
(+38 files in other folders)
